# tyai

client/: .prettierrc  README.md  electron-builder.yml  electron.vite.config.mjs  jsconfig.json  package.json  pnpm-lock.yaml
client/src/main/: index.js  ipc.js
client/src/preload/: index.js
client/src/renderer/: index.html  portable.html
client/src/renderer/src/: App.vue  main.js  portable.js
client/src/renderer/src/assets/css/: main.scss  portable.scss
client/src/renderer/src/components/main/sidebar/: Sidebar.vue
client/src/renderer/src/components/main/winbtns/: WinBtns.vue
client/src/renderer/src/components/sidebar/: Sidebar.vue
client/src/renderer/src/components/winbtns/: WinBtns.vue
client/src/renderer/src/form/: Form.vue
client/src/renderer/src/hooks/: useAxios.js  useRecorder.js
client/src/renderer/src/router/: index.js  main.js  portable.js
client/src/renderer/src/stores/main/: settings.js
client/src/renderer/src/stores/portable/: data.js
client/src/renderer/src/views/doc/: Doc.vue
client/src/renderer/src/views/docs/: Docs.vue
client/src/renderer/src/views/form/: Form.vue
client/src/renderer/src/views/knowledge/: Knowledge.vue
client/src/renderer/src/views/main/: App.vue
client/src/renderer/src/views/main/doc/: Doc.vue
client/src/renderer/src/views/main/docs/: Docs.vue
client/src/renderer/src/views/ocr/: Ocr.vue
client/src/renderer/src/views/portable/: App.vue
client/src/renderer/src/views/speech/: Speech.vue
server/: .env  .gitignore  main.py  pyproject.toml  tasks.py
server-sam3/: .env  main.py  pyproject.toml  tasks.py
server/dl/: funasr.py
server/src/: api.py  db.py
(+9 files in other folders)
